2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove duplicate sub definition.

	* Pod-Simple-Texinfo/pod2texi.pl (__): Remove definition as 
	there is already one exported by Texinfo::Common (for translated 
	strings).

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Try to fix contrib/perldoc-all.

	* contrib/perldoc-all/gendocs-sh: Add, from gendocs.sh in gnulib 
	project.
	* contrib/perldoc-all/Makefile.am: Access it instead of relying 
	on gendocs.sh being in path.  Do not remove *.?? (intending to 
	remove auxiliary index files) as this may delete the *.tar.gz 
	file the user has just downloaded.

	Keith Thomson reported problems with building Perl manuals with 
	this system.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Centralise parser configuration values.

	* tp/Texinfo/ParserNonXS.pm,
	* tp/Texinfo/Common.pm (%default_customization_values):
	Move to Common.pm.
	* tp/Texinfo/XS/parsetexi/Parsetexi.pm: Use this hash instead of 
	having a separate copy for this module.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove 'parent_type' field.

	* tp/Texinfo/XS/parsetexi/tree_types.h (ELEMENT):
	Remove field 'parent_type'.
	(enum route_element_type): Remove.
	* tp/Texinfo/XS/parsetexi/end_line.c (end_line_starting_block)
	(end_line),
	* tp/Texinfo/XS/parsetexi/indices.c (wipe_index),
	* tp/Texinfo/XS/parsetexi/api.c (build_perl_array)
	(build_single_index_data): Check whether 'parent' is null to see 
	if an element is in tree.  This should work for all elements 
	except the root of the tree.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove reference line numbers in parsetexi.

	* tp/Texinfo/XS/parsetexi: Remove most of the comments with what 
	the line numbers were of the corresponding Perl code at the time 
	that parsetexi was first started.  Leave some where more work 
	might be needed.
	* tp/Texinfo/XS/parsetexi/main.c: Remove.
	* tp/Texinfo/XS/parsetexi/Common.pm: Remove.
